# opencount_ci

./: README.md  license  pyproject.toml  requirements.txt
examples/: basic_usage.py
src/: test_apple.py
src/opencount_ci/: __init__.py  __main__.py  __version__.py  analyzer.py  api.py  cli.py  config.py  exceptions.py  grouping.py  setup.py
src/opencount_ci/classification/: __init__.py  classify.py  concrete_rules.py  rules.py
src/opencount_ci/core/: base.py  geometry.py  image_utils.py
src/opencount_ci/detectors/: log.py  watershed.py
src/opencount_ci/utils/: reports.py  visualization.py
tests/: test_import.py
